api swagger cambios
